# frand

./: Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
benches/: bench.rs  bool.rs  f64.rs  fastrand.rs  frand.rs  rand_small_rng.rs  rand_thread_rng.rs  u128.rs  u64.rs
examples/: check.rs  float.rs  image.rs  integer.rs  no-std.rs  range.rs  repetition-check.rs  shuffle.rs  test-avalanche.rs  test-repetition.rs  test-uniformity.rs  test.rs
examples/no-std/: Cargo.toml
examples/no-std/src/: lib.rs
src/: bench_util.rs  cast.rs  gen.rs  lib.rs  rng.rs  rng_core_impl.rs  shuffle.rs  thread.rs  traits.rs
