[package]
name = "frand"
version = "0.9.0"
edition = "2021"
authors = ["EngusMaze"]
description = "Blazingly fast random number generation library"
tags = ["rng", "random", "no_std"]
repository = "https://github.com/engusmaze/frand"
homepage = "https://github.com/engusmaze/frand"
license = "Apache-2.0 OR MIT"
exclude = ["*.png"]
readme = "README.md"

[dev-dependencies]
hashbrown = "0.14.5"
image = { version = "0.24.6", default-features = false, features = ["png"] }

# Other PRNGs
rand = { version = "0.8.5", features = ["small_rng"] }
fastrand = "2.0.0"

[dependencies]
glam = { version = "0.27", optional = true }

[features]
default = ["glam", "std", "alloc"]
glam = ["dep:glam"]
std = ["alloc"]
alloc = []
