[package]
name = "frand"
version = "0.10.0"
edition = "2021"
authors = ["EngusMaze"]
description = "Blazingly fast random number generation library"
tags = ["rng", "random", "no_std"]
repository = "https://github.com/engusmaze/frand"
homepage = "https://github.com/engusmaze/frand"
license = "Apache-2.0 OR MIT"
exclude = ["*.png"]
readme = "README.md"

[dev-dependencies]
hashbrown = "0.14.5"
image = { version = "0.24.6", default-features = false, features = ["png"] }
rand = { version = "0.8", features = ["small_rng"] }
# Other PRNGs

fastrand = "2.0.0"

[dependencies]
glam = { version = "0", optional = true }
rand = { version = "0.8", features = ["small_rng"], optional = true }
rand_core = { version = "0.6", optional = true }

[features]
default = ["glam", "std", "thread_rng", "impl_rng_core"]
thread_rng = ["dep:rand", "impl_rng_core"]
impl_rng_core = ["dep:rand_core", "dep:rand"]
glam = ["dep:glam"]
std = []
