[package]
name = "frand"
version = "0.10.0"
edition = "2021"
authors = ["EngusMaze"]
description = "Blazingly fast random number generation library"
tags = ["rng", "random", "no_std"]
repository = "https://github.com/engusmaze/frand"
homepage = "https://github.com/engusmaze/frand"
license = "Apache-2.0 OR MIT"
exclude = ["*.png"]
readme = "README.md"

[dev-dependencies]
image = { version = "0.24.6", default-features = false, features = ["png"] }

# Other PRNGs
rand = { version = "0.8", features = ["small_rng"] }
fastrand = "2.0.0"

[dependencies]
glam = { version = "0", optional = true }
rand_core = { version = "0.6", optional = true }

[features]
default = ["glam", "std", "impl_rng_core"]
impl_rng_core = ["dep:rand_core"]
glam = ["dep:glam"]
std = []
